--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <div id="navbar">
         <a href="#">Video</a>
-        <a href="#">Supporting Material</a>
+        <a href="supporting.html">Supporting Material</a>
     </div>
     
     <div id="video-container">
