--- a/supporting.html
+++ b/supporting.html
@@ -769,7 +769,10 @@ div.WordSection1
 </head>
 
 <body lang=EN-GB style='tab-interval:36.0pt;word-wrap:break-word'>
-
+<div id="navbar">
+        <a href="#">Video</a>
+        <a href="supporting.html">Supporting Material</a>
+</div>
 <div class=WordSection1>
 
 <p class=MsoNormal align=center style='text-align:center'><u><span lang=EN-US
