--- a/supporting.html
+++ b/supporting.html
@@ -769,9 +769,28 @@ div.WordSection1
 </head>
 
 <body lang=EN-GB style='tab-interval:36.0pt;word-wrap:break-word'>
+<style>
+	#navbar {
+            background-color: #333;
+            overflow: hidden;
+        }
+        
+        #navbar a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        
+        #navbar a:hover {
+            background-color: #555;
+        }
+</style>
 <div id="navbar">
-        <a href="#">Video</a>
-        <a href="supporting.html">Supporting Material</a>
+        <a href="index.html">Video</a>
+        <a href="#">Supporting Material</a>
 </div>
 <div class=WordSection1>
 
