--- a/index.html
+++ b/index.html
@@ -48,13 +48,16 @@
         <a href="#">Video</a>
         <a href="supporting.html">Supporting Material</a>
     </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
     
-    <div id="video-container">
-        <video id="video" controls>
-            <!-- Replace with your video source -->
-            <source src="your-video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+    <div style='font-size:40px;'>
+        Application Video:
+        <br>
+        <a href='https://youtube.com/watch?v=bLnbMYLORxw'>https://youtube.com/watch?v=bLnbMYLORxw</a>
     </div>
 </body>
 </html>
