--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <br>
     <br>
     
-    <div style='font-size:40px;'>
+    <div style='font-size:40px;text-align:center;'>
         Application Video:
         <br>
         <a href='https://youtube.com/watch?v=bLnbMYLORxw'>https://youtube.com/watch?v=bLnbMYLORxw</a>
