--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div style='font-size:40px;text-align:center;'>
         Application Video:
         <br>
-        <a href='https://youtube.com/watch?v=bLnbMYLORxw'>https://youtube.com/watch?v=bLnbMYLORxw</a>
+        <a href='https://youtu.be/bLnbMYLORxw'>https://youtu.be/bLnbMYLORxw</a>
     </div>
 </body>
 </html>
