--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div style='font-size:40px;text-align:center;'>
         Application Video:
         <br>
-        <a href='https://youtu.be/bLnbMYLORxw'>https://youtu.be/bLnbMYLORxw</a>
+        <a href='https://youtu.be/bLnbMYL0Rxw'>https://youtu.be/bLnbMYL0Rxw</a>
     </div>
 </body>
 </html>
