--- a/supporting.html
+++ b/supporting.html
@@ -798,8 +798,8 @@ div.WordSection1
 style='font-size:14.0pt;line-height:107%'>Supporting Material:<o:p></o:p></span></u></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:14.0pt;line-height:107%'>I won the bronze in the SASMO Math
-Competition in 6<sup>th</sup> grade:<o:p></o:p></span></p>
+style='font-size:14.0pt;line-height:107%'> SASMO Math
+Competition Certificate<sup>th</sup> grade:<o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='mso-no-proof:yes'><!--[if gte vml 1]><v:shapetype id="_x0000_t75"
@@ -832,8 +832,7 @@ src="supporting.fld/image002.png" v:shapes="Picture_x0020_427342120"><![endif]><
 lang=EN-US style='font-size:14.0pt;line-height:107%'><o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:14.0pt;line-height:107%'>I won the Global Citizenship Award in
-4<sup>th</sup> grade:<o:p></o:p></span></p>
+style='font-size:14.0pt;line-height:107%'> Global Citizenship Award <sup>th</sup> grade:<o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape id="Picture_x0020_1118782392"
@@ -846,8 +845,7 @@ src="supporting.fld/image004.png" v:shapes="Picture_x0020_1118782392"><![endif]>
 lang=EN-US style='font-size:14.0pt;line-height:107%'><o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:14.0pt;line-height:107%'>I ran a Student-Led Co-Curricular
-Activity in 6<sup>th</sup> grade:<o:p></o:p></span></p>
+style='font-size:14.0pt;line-height:107%'>Running for the Student-Led CCA<sup>th</sup> grade:<o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape id="Picture_x0020_751695012"
@@ -860,7 +858,7 @@ src="supporting.fld/image006.png" v:shapes="Picture_x0020_751695012"><![endif]><
 lang=EN-US style='font-size:14.0pt;line-height:107%'><o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:14.0pt;line-height:107%'>I was a House Captain in 6<sup>th</sup>
+style='font-size:14.0pt;line-height:107%'>House Captain in 6<sup>th</sup>
 grade:<o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
