--- a/supporting.html
+++ b/supporting.html
@@ -799,7 +799,7 @@ style='font-size:14.0pt;line-height:107%'>Supporting Material:<o:p></o:p></span>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='font-size:14.0pt;line-height:107%'> SASMO Math
-Competition Certificate<sup>th</sup> grade:<o:p></o:p></span></p>
+Competition Certificate:<o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='mso-no-proof:yes'><!--[if gte vml 1]><v:shapetype id="_x0000_t75"
@@ -832,7 +832,7 @@ src="supporting.fld/image002.png" v:shapes="Picture_x0020_427342120"><![endif]><
 lang=EN-US style='font-size:14.0pt;line-height:107%'><o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:14.0pt;line-height:107%'> Global Citizenship Award <sup>th</sup> grade:<o:p></o:p></span></p>
+style='font-size:14.0pt;line-height:107%'> Global Citizenship Award:<o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape id="Picture_x0020_1118782392"
@@ -845,7 +845,7 @@ src="supporting.fld/image004.png" v:shapes="Picture_x0020_1118782392"><![endif]>
 lang=EN-US style='font-size:14.0pt;line-height:107%'><o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='font-size:14.0pt;line-height:107%'>Running for the Student-Led CCA<sup>th</sup> grade:<o:p></o:p></span></p>
+style='font-size:14.0pt;line-height:107%'>Running for the Student-Led CCA:<o:p></o:p></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape id="Picture_x0020_751695012"
